Fixed responsive images issue, wont work on IE but, if you're using IE you don't deserve beautiful things.

--- a/src/style.css
+++ b/src/style.css
@@ -60,9 +60,9 @@
 
 .learn-more-line {
   height: 9px;
-  background-color: #fdf19e;
+  background-color: #fdf5c4;
   width: 133px;
-  transform: translate(-3px, -10px);
+  transform: translate(-3px, -11px);
   position: relative;
   z-index: 0;
   border-radius: 9999px;
